# aria-version2

./: .gitignore  PRIVACY.md  TERMS.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
dashboard/: budget.html  dev.html  finance.html  income.html  index.html  subscriptions.html  timesheets.html  vault.html
dashboard/js/: brand-logos.js  income.js
dashboard/shared/: style.css
docs/: ARCHITECTURE.md  layout-debug.md
sidecar/: index.js  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/context/: aria_personality.md  living_notes.md  skills.md  tool_rules.md  user_profile.md
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  briefing.rs  browser.rs  context.rs  dashboard_server.rs  dev_inspector.rs  document_extract.rs  elevenlabs.rs  enable_banking.rs  google.rs  holdings.rs  income.rs  launcher.rs  lib.rs  main.rs  ollama.rs  pricing.rs  printer.rs  process_utils.rs  reconciliation.rs  screenshot.rs  settings.rs  spotify.rs  subscriptions.rs  system_stats.rs  tools.rs  usage.rs  voice.rs  web.rs  whisper_sidecar.rs
src/components/: AriaLogo.tsx  BrandLogo.tsx  ChatPanel.tsx  TitleBar.tsx
src/contexts/: VoiceContext.tsx
src/data/: mockChats.ts  mockFolders.ts
src/hooks/: useAriaState.ts  useChat.ts  useThinkingAnimations.ts
src/lib/: aria.ts  db.ts
src/views/: HomeView.tsx
voice-sidecar/: requirements.txt  whisper_server.py
