[package]
name = "aria"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql  = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "6"
tokio = { version = "1", features = ["rt", "time", "sync", "net"] }
axum = { version = "0.7", features = ["multipart"] }
pdf-extract = "0.7"
zip = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid  = { version = "1", features = ["v4"] }
dotenvy = "0.15"
chrono = "0.4"
trash = "3"
scraper = "0.21"
screenshots = "0.8"
arboard = "3.4"
base64 = "0.22"
image = "0.25"
opener = "0.7"
tiny_http = "0.12"
urlencoding = "2.1"
cpal = "0.15"
hound = "3.5"
rodio = "0.19"
tauri-plugin-global-shortcut = "2"
sysinfo = "0.32"
jsonwebtoken = "9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winreg = "0.52"
